force-app/main/default/objects/copado__Git_Commit__c/fields/copado__Branch__c.field-meta.xml
<CustomField>
    <fullName>copado__Branch__c</fullName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>