force-app/main/default/objects/copado__Git_Commit__c/fields/copado__Commit_Datetime__c.field-meta.xml
<CustomField>
    <fullName>copado__Commit_Datetime__c</fullName>
    <label>Commit Datetime</label>
    <type>DateTime</type>
</CustomField>