force-app/main/default/objects/copado__Git_Commit__c/fields/copado__Commit_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Commit_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Commit Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>