force-app/main/default/objects/copado__Git_Commit__c/fields/copado__Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>copado__Git_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Git Repository</label>
    <referenceTo>copado__Git_Repository__c</referenceTo>
    <relationshipLabel>Git Commits</relationshipLabel>
    <relationshipName>Git_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>